Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.12.0 Alpha
-
Fix Version/s: 5.12.0 Alpha
-
Component/s: Build tools: qmake
-
Labels:None
-
Environment:5.12 branch (07eda676e45f6c3c7237581c3f4a9e39695697ab)
-
Platform/s:
-
Commits:999d4d5777b098f9c1f311af4addad910e44ab62
Description
- Configure with -system-zlib -qtlibinfix .t.
- make
Result:
gmake[2]: Entering directory '/home/tjmaciei/obj/qt/qt5/qtbase/src/tools/rcc' g++ -pipe -march=native -Wl,-O1 -Wl,--as-needed -Wl,-z,relro -Wl,--enable-new-dtags -fuse-linker-plugin -Wl,-O1 -fuse-ld=gold -Wl,--enable-new-dtags -Wl,--gdb-index -Wl,--gc-sections -Wl,-z,nocopyreloc -o ../../../bin/rcc .obj/rcc.o .obj/main.o -L/home/tjmaciei/obj/qt/qt5/qtbase/lib -lQt5Bootstrap.t -lpthread /home/tjmaciei/src/qt/qt5/qtbase/src/corelib/tools/qbytearray.cpp:760: error: undefined reference to 'compress2' collect2: error: ld returned 1 exit status gmake[2]: *** [Makefile:112: ../../../bin/rcc] Error 1 gmake[2]: Leaving directory '/home/tjmaciei/obj/qt/qt5/qtbase/src/tools/rcc'
Indeed, the src/tools/rcc/Makefile has:
LIBS = $(SUBLIBS) -L/home/tjmaciei/obj/qt/qt5/qtbase/lib -lQt5Bootstrap.t -lpthread
The old build had:
LIBS = $(SUBLIBS) -L/home/tjmaciei/obj/qt/qt5-clang/qtbase/lib -lQt5Bootstrap.t -lz -lpthread
(different lib paths because it's the Clang build I haven't erased yet)
Attachments
Issue Links
- relates to
-
QTBUG-25521 Configuring with an infix that has dots fails
-
- Closed
-
- resulted in
-
QTBUG-70444 macOS: some of the .prl files have lost the actual filename
-
- Closed
-